# shannon-bot

./: .gitignore  Dockerfile  config.py  requirements.txt  sitecustomize.py  verify_key.py  verify_key_raw.py
deployment_hf/: README_DEPLOY.md  hf_entrypoint.sh  hf_monitor.py  zeabur_entrypoint.sh
memory/: user_global.md
基础库/common_core/: __init__.py  pyproject.toml
基础库/common_core/backtest/: equity.py  evaluate.py  figure.py  metrics.py  rebalance.py  signal.py  simulator.py  可视化.py  进度条.py
基础库/common_core/config/: loader.py  models.py
基础库/common_core/exchange/: base_client.py  binance_async.py  standard_client.py
基础库/common_core/quant_unified_common_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
基础库/common_core/risk_ctrl/: liquidation.py  test_liquidation.py
基础库/common_core/tests/: test_orderbook_replay.py
基础库/common_core/utils/: async_commons.py  commons.py  dingding.py  factor_hub.py  functions.py  orderbook_replay.py  path_kit.py
服务/数据处理/: 转换Kaggle数据.py
服务/数据采集/: hf_sync.py  下载云端数据.py  下载币安官方历史数据.py  启动采集.py  整理行情数据.py  极速下载.py  补全历史成交.py
测试用例/: test_rename_map.py
策略仓库/一号择时策略/: install.sh
策略仓库/七号VWAP策略/: README.md
策略仓库/三号对冲策略/: backtest.py  config.py  config_backtest.py  config_live.py  real_trading.py
策略仓库/二号网格策略/: README.md  backtest.py  config.py  config.yaml  config_backtest.py  config_live.py  emergency_diag.py  emergency_reduce.py  quantity_precision.py  real_trading.py  test_api.py  test_papi_cancel.py  test_papi_cancel_deep.py  verify_fix.py  verify_orders.py
策略仓库/五号预测策略/: backtest.py  config.py  result.txt  (+8 more)
(+267 files in other folders)
